# django-auth-101

./: .flake8  .gitignore  README.md  pyproject.toml
django_101/: db.sqlite3  manage.py  reset-db.sh
django_101/account/: __init__.py  apps.py  forms.py  models.py  signals.py  tokens.py  urls.py  views.py
django_101/account/migrations/: 0001_initial.py
django_101/django_101/: asgi.py  settings.py  urls.py  wsgi.py
django_101/django_101/management/commands/: setting_default_domain.py
django_101/templates/commons/: signup-complete.html
django_101/users/: forms.py  urls.py  views.py
