[tool.poetry]
name = "django-auth-101"
version = "0.1.0"
description = ""
authors = ["lifnaja <alif23669@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.5"
flake8 = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
